[FIXED] Modal title spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -181,8 +181,6 @@ a:visited {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  margin: auto;
-  margin-bottom: 80px;
 }
 
 .apply-facebook {
